--- a/src/main/resources/view/DialogBox.fxml
+++ b/src/main/resources/view/DialogBox.fxml
@@ -7,8 +7,13 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<fx:root alignment="CENTER_LEFT" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="123.0" prefWidth="400.0" type="javafx.scene.layout.HBox" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root alignment="CENTER_RIGHT" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="123.0" prefWidth="400.0" type="javafx.scene.layout.HBox" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
   <children>
+      <Text fx:id="dialog" boundsType="VISUAL" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="300.0" HBox.hgrow="ALWAYS">
+         <font>
+            <Font name="Menlo Regular" size="13.0" />
+         </font>
+      </Text>
       <StackPane prefHeight="83.0" prefWidth="90.0">
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -17,11 +22,6 @@
           <ImageView fx:id="displayPicture" fitHeight="60.0" fitWidth="65.0" pickOnBounds="true" preserveRatio="true" />
          </children>
       </StackPane>
-      <Text fx:id="dialog" boundsType="VISUAL" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="250.0" HBox.hgrow="ALWAYS">
-         <font>
-            <Font name="Menlo Regular" size="13.0" />
-         </font>
-      </Text>
   </children>
   <padding>
     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
