--- a/src/main/resources/view/DialogBox.fxml
+++ b/src/main/resources/view/DialogBox.fxml
@@ -5,11 +5,11 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 
-<fx:root alignment="TOP_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="400.0" type="javafx.scene.layout.HBox" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root alignment="TOP_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="400.0" type="javafx.scene.layout.HBox" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <Label fx:id="dialog" text="Label" wrapText="true" maxWidth="200.0">
+        <Label fx:id="dialog" minHeight="-Infinity" minWidth="-Infinity" text="Label" wrapText="true">
             <padding>
-                <Insets top="5" right="8" bottom="5" left="8" />
+                <Insets bottom="5" left="8" right="8" top="5" />
             </padding>
         </Label>
         <ImageView fx:id="displayPicture" fitHeight="127.0" fitWidth="127.0" pickOnBounds="true" preserveRatio="true" />
@@ -18,5 +18,3 @@
         <Insets bottom="15.0" left="5.0" right="8.0" top="15.0" />
     </padding>
 </fx:root>
-
-
